Changes made again and again YOHgit add .!

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Reg_Number Check</title>
-    <link rel="stylesheet" href="grid/sinple-grid.css">
-    <link rel="stylesheet" href="grid/simple-grid.min.css">
+    <link rel="stylesheet" href="sinple-grid.css">
+    <link rel="stylesheet" href="simple-grid.min.css">
     <link rel="stylesheet" href="reg_number.css">
   </head>
   <body>
@@ -18,7 +18,7 @@
         <div class="row">
           <div class="col-12 ofText">
             Enter registration number:
-            <input class="textInput" type="text" name="text" value="" placeholder="eg.CA 465-647" maxlength="9" required>
+            <input class="textInput" type="text" name="text" value="" placeholder="eg. CA 465-647" maxlength="9" required>
             <input class="Addbtn onclick" type="button" name="add" value="Add">
             <input class="clear onclick" type="button" name="Clear" value="Clear">
 
@@ -30,7 +30,7 @@
               <div class="dropdown">
                 <h3>Select your Town</h3>
                   <!-- <button class="dropbtn">Select Town</button> -->
-                    <select class="dropdown-content">
+                    <select class="dropdown2">
                       <option name="CapeTown" class="dropdownSelect" value="CapeTown" selected>Cape Town</option>
                         <option name="George" class="dropdownSelect" value="George" >George</option>
                         <option name="Paarl" class="dropdownSelect" value="Paarl" >Paarl</option>
@@ -42,12 +42,12 @@
         </div>
 
         <div class="row ofDisplay">
-            <span class="col-12 display1" id="displayMaaan"></span>
+            <span class="col-6 display1" id="displayMaaan"></span>
 
         </div>
     </div>
 
   </body>
-  <script src="reg_numbers.js" charset="utf-8"></script>
-  <script src="reg_numbers_dom.js" charset="utf-8"></script>
+  <script src="js/reg_numbers.js" charset="utf-8"></script>
+  <script src="js/reg_numbers_dom.js" charset="utf-8"></script>
 </html>
