--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1 class="head">Regitration numbers</h1>
+                <h1 class="head">Registration numbers</h1>
             </div>
         </div>
         <div class="row">
@@ -31,7 +31,9 @@
                 <h3>Select your Town</h3>
                   <!-- <button class="dropbtn">Select Town</button> -->
                     <select class="dropdown2">
-                      <option name="CapeTown" class="dropdownSelect" value="CapeTown" selected>Cape Town</option>
+                        <option name="CapeTown" class="dropdownSelect" value="SelectTown" selected>Select Town</option>
+                        <option name="CapeTown" class="dropdownSelect" value="All">All</option>
+                        <option name="CapeTown" class="dropdownSelect" value="CapeTown" >Cape Town</option>
                         <option name="George" class="dropdownSelect" value="George" >George</option>
                         <option name="Paarl" class="dropdownSelect" value="Paarl" >Paarl</option>
                         <option name="Stellenbosch" class="dropdownSelect" value="Stellenbosch" >Stellenbosch</option>
@@ -48,6 +50,6 @@
     </div>
 
   </body>
-  <script src="js/reg_numbers.js" charset="utf-8"></script>
-  <script src="js/reg_numbers_dom.js" charset="utf-8"></script>
+  <script src="reg_numbers.js" charset="utf-8"></script>
+  <script src="reg_numbers_dom.js" charset="utf-8"></script>
 </html>
