Work in progress

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                         <option name="CapeTown" class="dropdownSelect" value="All">All</option>
                         <option name="CapeTown" class="dropdownSelect" value="CapeTown" >Cape Town</option>
                         <option name="George" class="dropdownSelect" value="George" >George</option>
-                        <option name="Paarl" class="dropdownSelect" value="Paarl" >Paarl</option>
-                        <option name="Stellenbosch" class="dropdownSelect" value="Stellenbosch" >Stellenbosch</option>
+                        <option name="Paarl" class="dropdownSelect" value="Strand" >Strand</option>
+                        <option name="Stellenbosch" class="dropdownSelect" value="Paarl" >Paarl</option>
                       </select>
                   </div>
                 </div>
