--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
                 <h3>Select your Town</h3>
                   <!-- <button class="dropbtn">Select Town</button> -->
                     <select class="dropdown2">
-                        <option name="CapeTown" class="dropdownSelect" value="SelectTown" selected>Select Town</option>
-                        <option name="CapeTown" class="dropdownSelect" value="All">All</option>
-                        <option name="CapeTown" class="dropdownSelect" value="CapeTown" >Cape Town</option>
-                        <option name="George" class="dropdownSelect" value="George" >George</option>
-                        <option name="Paarl" class="dropdownSelect" value="Strand" >Strand</option>
-                        <option name="Stellenbosch" class="dropdownSelect" value="Paarl" >Paarl</option>
+                        <option name="" class="dropdownSelect" value="SelectTown" name = "Select"></option>
+                        <option name="CapeTown" class="dropdownSelect" value="All">All Towns</option>
+                        <option name="CapeTown" class="dropdownSelect" value="CA" >Cape Town</option>
+                        <option name="George" class="dropdownSelect" value="CAW" >George</option>
+                        <option name="Paarl" class="dropdownSelect" value="CL" >Strand</option>
+                        <option name="Stellenbosch" class="dropdownSelect" value="CJ" >Paarl</option>
                       </select>
                   </div>
                 </div>
