Changes made again

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Reg_Number Check</title>
-    <link rel="stylesheet" href="sinple-grid.css">
+    <link rel="stylesheet" href="simple-grid.css">
     <link rel="stylesheet" href="simple-grid.min.css">
     <link rel="stylesheet" href="reg_number.css">
   </head>
@@ -31,25 +31,24 @@
                 <h3>Select your Town</h3>
                   <!-- <button class="dropbtn">Select Town</button> -->
                     <select class="dropdown2">
-                        <option name="" class="dropdownSelect" value="SelectTown" name = "Select"></option>
-                        <option name="CapeTown" class="dropdownSelect" value="All">All Towns</option>
+                        <option name="All" class="dropdownSelect" value="All">All Towns</option>
                         <option name="CapeTown" class="dropdownSelect" value="CA" >Cape Town</option>
                         <option name="George" class="dropdownSelect" value="CAW" >George</option>
-                        <option name="Paarl" class="dropdownSelect" value="CL" >Strand</option>
-                        <option name="Stellenbosch" class="dropdownSelect" value="CJ" >Paarl</option>
+                        <option name="Strand" class="dropdownSelect" value="CEY" >Strand</option>
+                        <option name="Paarl" class="dropdownSelect" value="CJ" >Paarl</option>
+                        <option name="Wellington" class="dropdownSelect" value="CN" >Wellington</option>
                       </select>
                   </div>
                 </div>
             </span>
         </div>
-
+        <div class="col-12 alert"></div>
         <div class="row ofDisplay">
             <span class="col-6 display1" id="displayMaaan"></span>
-
         </div>
     </div>
 
   </body>
-  <script src="reg_numbers.js" charset="utf-8"></script>
-  <script src="reg_numbers_dom.js" charset="utf-8"></script>
+  <script src="js/reg_numbers.js" charset="utf-8"></script>
+  <script src="js/reg_numbers_dom.js" charset="utf-8"></script>
 </html>
