--- a/test.html
+++ b/test.html
@@ -16,8 +16,8 @@
         var assert = chai.assert;
     </script>
 
-    <script src="reg_numbers.js" charset="utf-8"></script>
-    <script src="test/reg-number-test.js" charset="utf-8"></script>
+    <script src="js/reg_numbers.js" charset="utf-8"></script>
+    <script src="js/test/reg-number-test.js" charset="utf-8"></script>
 
     <script>
         mocha.checkLeaks();
