--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
         <div class="row">
           <div class="col-12 ofText">
             Enter registration number:
-            <input class="textInput" type="text" name="text" value="" placeholder="eg. CA 465-647" maxlength="9" required>
+            <input class="textInput" type="text" name="text" value="" placeholder="eg. CA 465-647" maxlength="12" required>
             <input class="Addbtn onclick" type="button" name="add" value="Add">
             <input class="clear onclick" type="button" name="Clear" value="Clear">
 
           </div>
         </div>
         <div class="row">
-          <span>
+          <div>
             <div class="col-12 ofdropdown">
               <div class="dropdown">
                 <h3>Select your Town</h3>
                   <!-- <button class="dropbtn">Select Town</button> -->
-                    <select class="dropdown2">
+                    <select class="col-6 dropdown2">
                         <option name="All" class="dropdownSelect" value="All">All Towns</option>
-                        <option name="CapeTown" class="dropdownSelect" value="CA" >Cape Town</option>
+                        <option name="CapeTown" class="dropdownSelect" value="CA " >Cape Town</option>
                         <option name="George" class="dropdownSelect" value="CAW" >George</option>
                         <option name="Strand" class="dropdownSelect" value="CEY" >Strand</option>
                         <option name="Paarl" class="dropdownSelect" value="CJ" >Paarl</option>
@@ -40,11 +40,11 @@
                       </select>
                   </div>
                 </div>
-            </span>
+            </div>
         </div>
         <div class="col-12 alert"></div>
         <div class="row ofDisplay">
-            <span class="col-6 display1" id="displayMaaan"></span>
+            <span class="col-12 display1" id="displayMaaan"></span>
         </div>
     </div>
 
